refactor: decompose backend services and document extensive refactoring roadmap and implementation artifacts